crates/nash-report/src/syntax/snapshots/nash_report__syntax__tests__definition_unexpected_operator.snap
---
source: crates/nash-report/src/syntax/tests.rs
description: +
---
nash::syntax

  × Expected `=` in the definition of `f`.
   ╭─[src/Main.nash:1:1]
 1 │ +
   · ─
   ╰────
  help: Separate the arguments and body with `=`.
