crates/nash-report/src/syntax/snapshots/nash_report__syntax__tests__exposing_bare_operator.snap
---
source: crates/nash-report/src/syntax/tests.rs
description: module Main exposing (+)
---
nash::syntax

  × Exposed operators need parentheses.
   ╭─[src/Main.nash:1:23]
 1 │ module Main exposing (+)
   ·                       ─
   ╰────
  help: Write `(+)`.
