crates/nash-report/src/syntax/snapshots/nash_report__syntax__tests__exposing_missing_paren.snap
---
source: crates/nash-report/src/syntax/tests.rs
description: "Code:\n\nmodule Main exposing .."
---
nash::diagnostic

  × I want to parse exposed values, but I am getting stuck here:
   ╭─[src/Main.nash:1:22]
 1 │ module Main exposing ..
   ·                      ─
   ╰────
  help: Exposed values are always surrounded by parentheses. So try adding a ( here?

        Note: Here are some valid examples of `exposing` for reference:

            import Data.Decoder exposing (..)
            import Data.Decoder exposing (decode)

        If you are getting tripped up, you can just expose everything for now. It should
        get easier to make an explicit exposing list as you see more examples in the
        wild.
