crates/nash-report/src/syntax/snapshots/nash_report__syntax__tests__exposing_reserved_word.snap
---
source: crates/nash-report/src/syntax/tests.rs
description: if
---
RESERVED WORD

  × I got stuck on this reserved word:
   ╭─[src/Main.nash:1:1]
 1 │ if
   · ──
   ╰────
  help: It looks like you are trying to expose `if` but that is a reserved word. Is
        there a typo?
