crates/nash-report/src/syntax/snapshots/nash_report__syntax__tests__exposing_value_bad.snap
---
source: crates/nash-report/src/syntax/tests.rs
description: "Code:\n\nmodule Main exposing (1)"
---
nash::syntax

  × Expected a value, type, or operator to expose.
   ╭─[src/Main.nash:1:23]
 1 │ module Main exposing (1)
   ·                       ─
   ╰────
  help: Separate names with commas, or use `..` to expose everything.
