crates/nash-report/src/syntax/snapshots/nash_report__syntax__tests__fresh_line_after_decl.snap
---
source: crates/nash-report/src/syntax/tests.rs
description: "Code:\n\nx = 1 y = 2"
---
nash::syntax

  × Unexpected `=` in expression.
   ╭─[src/Main.nash:1:9]
 1 │ x = 1 y = 2
   ·         ─
   ╰────
  help: Use `==` for a comparison, or align a new definition with `x`.
