crates/nash-report/src/syntax/snapshots/nash_report__syntax__tests__fresh_line_keyword.snap
---
source: crates/nash-report/src/syntax/tests.rs
description: module
---
nash::diagnostic

  × This `module` should not have any spaces before it:
   ╭─[src/Main.nash:1:1]
 1 │ module
   · ─
   ╰────
  help: Delete the spaces before `module` until there are none left!
