crates/nash-report/src/syntax/snapshots/nash_report__syntax__tests__import_bad_alias.snap
---
source: crates/nash-report/src/syntax/tests.rs
description: "Code:\n\nimport Cardano.Tx as tx"
---
EXPECTING IMPORT ALIAS

  × I was parsing an `import` until I got stuck here:
   ╭─[src/Main.nash:1:22]
 1 │ import Cardano.Tx as tx
   ·                      ─
   ╰────
  help: I was expecting to see an alias next, like in these examples:

            import Cardano.Tx as Tx
            import Data.Decoder as D

        Notice that the alias always starts with a capital letter. That is required!
