crates/nash-report/src/syntax/snapshots/nash_report__syntax__tests__import_missing_name.snap
---
source: crates/nash-report/src/syntax/tests.rs
description: "Code:\n\nimport"
---
  × Expected a module name after `import`.
   ╭─[src/Main.nash:1:7]
 1 │ import
   ·       ─
   ╰────
  help: Use an uppercase module name.
