crates/nash-report/src/syntax/snapshots/nash_report__syntax__tests__malformed_empty_collections_keep_opener_and_comma_guidance-3.snap
---
source: crates/nash-report/src/syntax/tests.rs
description: "value = {]"
---
nash::syntax::unclosed_delimiter

  × Expected `}`, found `]`.
   ╭─[src/Main.nash:1:10]
 1 │ value = {]
   ·         ┬┬
   ·         │╰── expected `}`
   ·         ╰── opened here
   ╰────
  help: Replace `]` with `}`.
